--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   title:
     base: "Money Lover"
+    forgot_password: "Forgot password"
   sessions:
     login: "Log in"
     forgot_password: "Forgot password"
@@ -9,15 +10,33 @@ en:
     logout: "Logout"
   button:
     signup: "Sign up"
+    send_mail: "Send to mail"
+    update_password: "Update password"
   users:
     create_my_account: "Create my account"
     profile: "Profile"
+    setting: "Setting"
+    edit: "Edit"
+    update: "Update"
+    change: "Change"
   error:
     error: "Error"
     content: "The form contains"
+    not_empty: "Not empty"
   flash:
     created_account: "Created account"
     no_account: "No account"
     invalid_account: "Invalid email or password"
+    email_invalid: "Email not found"
+    pass_exp: "Expried"
+    sent_password_reset: "Please check your mail to reset password" 
+    success: "Successful"
+    update_success: "Update Successful"
+  mail:
+    password_reset: "password reset"
+    head: "To reset your password click the link below:"
+    content_expire: "This link will expire in two hours."
+    foot: "If you did not request your password to be reset, please ignore this email and your password will stay as it is." 
   menu:
-    account: "Account"    
+    account: "Account" 
+  home: "Home" 
