--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
     signup: "Sign up"
     send_mail: "Send to mail"
     update_password: "Update password"
+    save_month_intense: "Save"
+    close: "Close"
   users:
     create_my_account: "Create my account"
     profile: "Profile"
@@ -32,6 +34,7 @@ en:
     sent_password_reset: "Please check your mail to reset password" 
     success: "Successful"
     update_success: "Update Successful"
+    update_fail: "Please rewrite"
   mail:
     password_reset: "password reset"
     head: "To reset your password click the link below:"
@@ -40,3 +43,4 @@ en:
   menu:
     account: "Account" 
   home: "Home" 
+  month_intense: "Setup intense of month"
