--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,11 @@ en:
   title:
     base: "Money Lover"
     forgot_password: "Forgot password"
+    base: "Money Lover"
+    info: '%{obj} Information'
+    create_savings: "Create Savings"
+    create: 'Create %{obj}'
+    edit: 'Edit %{obj}'
   sessions:
     login: "Log in"
     forgot_password: "Forgot password"
@@ -31,7 +36,7 @@ en:
     invalid_account: "Invalid email or password"
     email_invalid: "Email not found"
     pass_exp: "Expried"
-    sent_password_reset: "Please check your mail to reset password" 
+    sent_password_reset: "Please check your mail to reset password"
     success: "Successful"
     update_success: "Update Successful"
     update_fail: "Please rewrite"
@@ -39,8 +44,60 @@ en:
     password_reset: "password reset"
     head: "To reset your password click the link below:"
     content_expire: "This link will expire in two hours."
-    foot: "If you did not request your password to be reset, please ignore this email and your password will stay as it is." 
+    foot: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
   menu:
-    account: "Account" 
-  home: "Home" 
+    account: "Account"
+  home: "Home"
   month_intense: "Setup intense of month"
+
+  header:
+    toggle: "Toggle navigation"
+    logo:
+      _1: "Money"
+      _2: "Lover"
+
+  menu:
+    manage_db: "Manage Database"
+    statistic: "Statistic"
+    profile: "Profile"
+    account: "Account"
+    logout: "Logout"
+
+  table:
+    title:
+      users: "User Table"
+      edit_user: "Edit User Information"
+      savings: "Savings Rate Table"
+      categories: "Categories"
+    head:
+      id: "ID"
+      name: "Name"
+      username: "Username"
+      email: "Email"
+      phone: "Phone"
+      address: "Address"
+      savings: "Savings Rate"
+      role: "Role"
+      cat_name: "Category Name"
+  button:
+    save: "Save"
+    view: "View"
+    new: "Add new"
+    update: "Update"
+    delete: "Delete"
+    back: "Back"
+
+  option:
+    root: "<< Root >>"
+
+  alert:
+    confirm_del: "Are you sure?"
+    created: '%{obj} Created'
+    not_found: '%{obj} Not Found'
+    fail: " Failed"
+    updated: '%{obj} Updated'
+    deleted: '%{obj} Deleted'
+    delete_failed: '%{obj} Delete Failed'
+    welcome_admin: "Welcome to admin dashboards"
+    form_contain: "The form contains"
+    error: "error"
