--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -2,34 +2,253 @@ vi:
   title:
     base: "Money Lover"
     forgot_password: "Quên mật khẩu"
+    info: '%{obj} Thông tin'
+    create_savings: "Tạo số tiền tiết kiệm"
+    create: 'Tạo %{obj}'
+    edit: 'Sửa %{obj}'
+    category_user: "Danh mục cá nhân"
+  admin:
+    title:
+      year_stats: "Thống kê người dùng đăng ký theo năm"
+      year_stats_2: "Thống kê người dùng đăng ký theo tháng"
+      month_stats: "Thống kê người dùng đăng ký theo tháng"
+    stats_by_year:
+      _x: "Tháng"
+      _y: "Người dùng"
+    months:
+      _1: "Tháng 1"
+      _2: "Tháng 2"
+      _3: "Tháng 3"
+      _4: "Tháng 4"
+      _5: "Tháng 5"
+      _6: "Tháng 6"
+      _7: "Tháng 7"
+      _8: "Tháng 8"
+      _9: "Tháng 9"
+      _10: "Tháng 10"
+      _11: "Tháng 11"
+      _12: "Tháng 12"
+    label:
+      enter_year: "Nhập năm: "
+    alert:
+      no_result: 'Không có dữ liệu %{obj} để thống kê'
+      no_data: "Không có dữ liệu để thống kê"
+    combobox:
+      show_all: "Hiển thị toàn bộ"
+      not_match: " Không tìm thấy danh mục phù hợp"
   sessions:
     login: "Đăng nhập"
     forgot_password: "Quên mật khẩu"
     remember_me: "Lưu tài khoản"
-    new_account: "Tạo tài khoản"
+    new_account: "Tạo tài khoản?"
     logout: "Đăng xuất"
   button:
     signup: "Đăng ký"
-    send_mail: "Gửi đến mail"
+    send_mail: "Gửi tới mail"
     update_password: "Cập nhật mật khẩu"
+    save_month_intense: "Lưu"
+    close: "Đóng"
+    save: "Lưu"
+    view: "Xem"
+    new: "Thêm mới"
+    update: "Cập nhật"
+    delete: "Xóa"
+    back: "Quay lại"
+    back_to_home: "Về trang chủ"
+    submit: "Xem thống kê"
+    search: "Tìm kiếm"
+    edit: "Thay đổi"
   users:
     create_my_account: "Tạo tài khoản"
-    profile: "Tài khoản"
+    profile: "Thông tin cá nhân"
+    setting: "Cài đặt"
+    edit: "Sửa"
+    update: "Cập nhật"
+    change: "Thay đổi"
   error:
     error: "Lỗi"
-    content: "The form contains"
+    content: "Bao gồm"
     not_empty: "Không được để trống"
   flash:
-    created_account: "Tạo tài khoản thành công"
-    no_account: "Tài khoản không tồn tại"
-    invalid_account: "Sai email hoặc mật khẩu"  
-    email_invalid: "Không tìm thấy email" 
-    pass_exp: "Hết thời gian"
-    sent_password_reset: "Vui lòng kiểm tra mail để thiết lập lại mật khẩu"
+    created_account: "ĐÃ tạo tài khoản"
+    no_account: "Không có tài khoản nào!"
+    invalid_account: "Sai email hoặc mật khẩu"
+    email_invalid: "Không tìm thấy địa chỉ email"
+    pass_exp: "Đã hết hiệu lực"
+    sent_password_reset: "Vui lòng kiểm tra email để đặt lại mật khẩu"
+    success: "Thành công"
+    update_success: "Cập nhật thành công"
+    update_fail: "Vui lòng nhập lại"
   mail:
     password_reset: "Đặt lại mật khẩu"
     head: "Click vào link dưới đây để thiết lập lại mật khẩu của bạn:"
     content_expire: "Link này sẽ hết hiệu lực trog 2 giờ tới."
-    foot: "Nếu bạn không muốn thiết lập lại mật khẩu vui lòng bỏ qua mail này."  
+    foot: "Nếu bạn không muốn thiết lập lại mật khẩu vui lòng bỏ qua mail này." 
+  header:
+    toggle: "Danh mục"
+    logo:
+      _1: "Money"
+      _2: "Lover"
+    welcome: "Xin chào, "
+    language: "Ngôn ngữ"
+    english: "Tiếng Anh"
+    vietnam: "Tiếng Việt"
   menu:
-    account: "Tài khoản" 
+    manage_db: "Quản lý cơ sở dữ liệu"
+    statistic: "Thống kê"
+    profile: "Thông tin cá nhân"
+    account: "Tài khoản"
+    logout: "Đăng xuất"
+    stat_users: "Thống kê người dùng"
+    stat_user_by_month: "Thống kê người dùng theo tháng"
+    stat_user_by_year: "Thống kê người dùng theo năm"
+
+  table:
+    title:
+      users: "Bảng người dùng"
+      edit_user: "Sửa thông tin người dùng"
+      savings: "Bảng giá trị tiết kiệm"
+      categories: "Danh mục"
+    head:
+      id: "ID"
+      name: "Tên người dùng"
+      username: "Tên tài khoản"
+      email: "Email"
+      phone: "Số điện thoại"
+      address: "Địa chỉ"
+      savings: "Khoản tiết kiệm"
+      role: "Vai trò"
+      cat_name: "Tên danh mục"
+  option:
+    root: "<< Cha >>"
+    search_cat: "Tìm kiếm danh mục"
+  alert:
+    confirm_del: "Bạn đồng ý xóa?"
+    created: '%{obj} Đã tạo'
+    not_found: '%{obj} Không tìm thấy'
+    fail: " Thất bại"
+    updated: '%{obj} Đã cập nhật'
+    deleted: '%{obj} Đã xóa'
+    delete_failed: '%{obj} Xóa thất bại'
+    welcome_admin: "Chào mừng đến với trang quản trị"
+    form_contain: "Bao gồm"
+    error: "lỗi"
+  month_intense: "Thiết lập chi tiêu tháng"
+  month_report:
+    title:
+      base: "Money Lover"
+      month_report: "Báo cáo theo tháng"
+      transaction: "Giao dịch"
+      add_transaction: "Thêm giao dịch"
+      amout: "Khoản tiền"
+      category: "Danh mục"
+      note: "Tên"
+      time: "Thời gian"
+      pieChart: "Biểu đồ tròn Thu/Chi"
+      columnChart: "Biểu đồ cột Thu/Chi"
+      money: "Money"
+      lover: "Lover"
+      report: "Báo cáo"
+      chart: "Biểu đồ"
+      plans: "Kế hoạch"
+      category_user: "Danh mục cá nhân"
+    link_page:
+      move_chart: "*Xem biểu đồ"
+      move_report: "*Xem báo cáo"
+      month_report: "Báo cáo theo tháng"
+      year_report: "Báo cáo theo năm"
+      category: "Danh mục"
+      profile: "Thông tin cá nhân"
+      logOut: "Đăng xuất"
+      account: "Tài khoản"
+    name_column:
+      stt_col: "#"
+      category_col: "Danh mục"
+      name_col: "Tên"
+      income_col: "Thu/Chi"
+      amout_col: "Khoản tiền"
+      sum_income_col: "Tổng thu"
+      sum_expense_col: "Tổng chi"
+      saving: "Tiến kiệm"
+      date_col: "Thời gian"
+    name_chart:
+      income: "Thu"
+      expense: "Chi"
+    other:
+      search: "Tìm kiếm theo tên.."
+      toggle: "Toggle navigation"
+      footer: "RubyTeam 2019 "
+      not_found: "Không có dữ liệu!"
+      select_date: "Vui lòng chọn thời gian"
+      need_save: "Tháng này, bạn cần"
+      complete: "để hoàn thành dự định tiết kiệm cả năm của bạn."
+      to_date: "Đến ngày"
+      from_date: "Từ ngày"
+    account: "Tài khoản"
+    transaction:
+      permanent: "Dài hạn"
+      income: "Thu"
+      expense: "Chi"
+      choice: "Thu/Chi"
+  home: "Trang chủ"
+  saving:
+    setup: "Setup spending"
+    saving: "Thiết lập dự định tiết kiệm trong năm"
+    year_saving: "Thiết lập dự định tiết kiệm trong năm"
+  year_report:
+    title:
+      titles_year: "Báo cáo theo năm"
+      intent_title: "Dự định tiết kiệm"
+      incomes_title: "Thu"
+      expense_title: "Chi"
+      column_title: "Thu và chi trong "
+      intents: "Dự định tiết kiệm trong năm"
+      old_month: "Báo cáo tháng trước"
+      intents_title: "Số tiền tiết kiệm"
+      table_title: "Giao dịch trong năm"
+    table:
+      name_column:
+        stt_col: "#"
+        month: "Tháng"
+        income: "Thu"
+        expense: "Chi"
+        saved: "Tiết kiệm"
+        amount: "Khoản tiền"
+        intense: "Dự định"
+    other:
+      need_save: "Từ tháng sau, bạm cần tiết kiệm"
+      per_month: "/1 tháng"
+      vnd: "VND"
+      month: " các tháng"
+    month:
+      month: "Tháng"
+      t1: "Tháng 1"
+      t2: "Tháng 2"
+      t3: "Tháng 3"
+      t4: "Tháng 4"
+      t5: "Tháng 5"
+      t6: "Tháng 6"
+      t7: "Tháng 7"
+      t8: "Tháng 8"
+      t9: "Tháng 9"
+      t10: "Tháng 10"
+      t11: "Tháng 11"
+      t12: "Tháng 12"
+  recommend:
+    title:
+      recommend_title: "Gợi ý chi tiêu"
+    col:
+      income: "Tổng thu nhập"
+      expenditure: "Chi tiêu bắt buộc"
+      saving: "Tiết kiệm cho tương lai"
+      education: "Đầu tư cho giáo dục"
+      enjoy: "Giải trí"
+      investment: "Đầu tư"
+      charity: "Từ thiện"
+      actual_expenditure: "Chi thực tế"
+      advice: "Đề nghị"
+      percent: "Phần trăm đề nghị"
+      one_hundred_percent: "100%"
+      fifty_percent: "50%"
+      ten_percent: "10%"
+      five_percent: "5%"
