--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,6 +79,8 @@ en:
     success: "Successful"
     update_success: "Update Successful"
     update_fail: "Please rewrite"
+    update_fail1: "Please rewrite1"
+    update_error: "Update Error"
   mail:
     password_reset: "password reset"
     head: "To reset your password click the link below:"
@@ -140,7 +142,7 @@ en:
       month_report: "Month's Report"
       transaction: "Transaction"
       add_transaction: "Add Transaction"
-      amout: "Amout"
+      amout: "Amount"
       category: "Category"
       note: "Name"
       time: "Date"
@@ -166,11 +168,13 @@ en:
       category_col: "Category"
       name_col: "Name"
       income_col: "Income/Expense"
-      amout_col: "Amout"
+      amout_col: "Amount"
       sum_income_col: "Income's Sum"
       sum_expense_col: "Expense's Sum"
       saving: "Savings"
       date_col: "Date"
+      permanent: "Permanent"
+      action: "Actions"
     name_chart:
       income: "Income"
       expense: "Expense"
